commit 3e5a357194016095c701e1198bb545ca68b84c87
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Aug 5 22:41:26 2010 +0900

    aufs stdalone: set all configs to a make variable
    
    This var is used to verify configs by another separated makefile, and
    mainly for myself.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 1ab626c25f1c5521f4728f8435c618a7acec160a
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Aug 2 21:37:20 2010 +0900

    aufs: version string for aufs2-36(-rcN)
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c292daecb4b74912cbe6f772eb8c3cd37f9b4cca
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Aug 2 21:08:46 2010 +0900

    aufs: version string for aufs2-35
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 801f76f4ce7f4e94f23d5f513a95c73e7e43730e
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Aug 2 21:05:35 2010 +0900

    aufs: version string for aufs2-35
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 5675361e2aaf8c49e95f9cdc4804c18add26a2c1
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Aug 1 12:52:57 2010 +0900

    aufs: tiny, note about the vdir cache
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6c34a3c246941b965f14a1638c11683c202b72d2
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Aug 1 12:27:40 2010 +0900

    aufs: more verbose at deleting a branch
    
    In deleting a branch, aufs searches the files in-use on that branch. If
    any of them are found, aufs rejects deleting immediately due to the
    branch is busy. It is basically equivalent to unmounting.
    But users may want to know the path of the opened file.
    This commit stops aufs to abondon the deleting process in verbose mode
    when it finds that there are file(s) opened on that branch. After
    printing the paths, aufs returns the error as usual. While the result is